--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
+{% load staticfiles %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href='{% static "css/main.css" %}' />
     <title>tryDjango - :)</title>
 </head>
 <body>
