updating template and requirements

--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -1,6 +1,16 @@
 {% extends 'base.html' %}
 
+
+{% block jumbotron %}
+<div class="jumbotron">
+    <h1>This is an example</h1>
+    <p>Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don’t simply skip over it entirely.</p>
+</div>
+{% endblock %}
+
+
 {% block content %}
+
 <h1>Hello world</h1>
 
 {{ request.user }} {{ request.user.is_authenticated }}
