--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -1,16 +1,63 @@
-<!DOCTYPE html>
+<!doctype html>
 {% load staticfiles %}
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href='{% static "css/main.css" %}' />
-    <title>tryDjango - :)</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
+    <meta name="generator" content="Jekyll v3.8.5">
+
+    <title>Dashboard Template · Bootstrap</title>
+
+    <link rel="stylesheet" href='{% static "css/main.css" %}'/>
+
+    <!-- Bootstrap core CSS -->
+    <link href='{% static "css/bootstrap.min.css" %}' rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+
+    <style>
+      .bd-placeholder-img {
+        font-size: 1.125rem;
+        text-anchor: middle;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+      }
+
+      @media (min-width: 768px) {
+        .bd-placeholder-img-lg {
+          font-size: 3.5rem;
+        }
+      }
+
+
+    </style>
+    <!-- Custom styles for this template -->
+    <link href='{% static "css/dashboard.css" %}' rel="stylesheet">
 </head>
 <body>
+<header>
     {% include 'navbar.html' %}
+</header>
+a
+<div class="container-fluid">
+    <div class="row">
+        <main role="main" class="col-md-12 ml-sm-auto col-lg-12 px-4">
+            {% block jumbotron %}
+            {% endblock %}
 
-    {% block content %}
-        replace me
-    {% endblock %}
+            {% block content %}
+            {% endblock %}
+        </main>
+    </div>
+</div>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script>window.jQuery || document.write("<script src='{% static "js/jquery-slim.min.js" %}'><\/script>")</script>
+<script src='{% static "js/bootstrap.bundle.min.js" %}' integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/feather-icons/4.9.0/feather.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.min.js"></script>
+<script src='{% static "js/dashboard.js" %}'></script>
 </body>
 </html>
