--- a/src/templates/about.html
+++ b/src/templates/about.html
@@ -2,7 +2,74 @@
 
 {% block content %}
 
-<h1>About Page</h1>
-<p>This is a template</p>
+<div class="row">
+    <div class="col-lg-6" style="text-align:center">
+        <!--<img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">-->
+        <h2>Our Vision</h2>
+        <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros.
+            Praesent commodo cursus magna.</p>
+        <!--<p><a class="btn btn-default" href="#" role="button">View details »</a></p>-->
+    </div><!-- /.col-lg-4 -->
+    <div class="col-lg-6" style="text-align:center">
+        <!--<img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">-->
+        <h2>Our Company</h2>
+        <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo,
+            tortor mauris condimentum nibh.</p>
+        <!--<p><a class="btn btn-default" href="#" role="button">View details »</a></p>-->
+    </div><!-- /.col-lg-4 -->
+</div>
+<!-- Container (Portfolio Section) -->
+<div id="portfolio" class="container-fluid text-center bg-grey">
+  <h2>Portfolio</h2><br>
+  <h4>What we have created</h4>
+  <div class="row text-center slideanim">
+    <div class="col-sm-4">
+      <div class="thumbnail">
+        <img src="https://getbootstrap.com/docs/3.4/assets/img/devices.png" alt="Paris" width="400" height="300">
+        <p><strong>Paris</strong></p>
+        <p>Yes, we built Paris</p>
+      </div>
+    </div>
+    <div class="col-sm-4">
+      <div class="thumbnail">
+        <img src="https://getbootstrap.com/docs/3.4/assets/img/components.png" alt="New York" width="400" height="300">
+        <p><strong>New York</strong></p>
+        <p>We built New York</p>
+      </div>
+    </div>
+    <div class="col-sm-4">
+      <div class="thumbnail">
+        <img src="https://getbootstrap.com/docs/3.4/assets/img/devices.png" alt="San Francisco" width="400" height="300">
+        <p><strong>San Francisco</strong></p>
+        <p>Yes, San Fran is ours</p>
+      </div>
+    </div>
+  </div><br>
+
+  <h2>What our customers say</h2>
+  <div class="row">
+    <div class="col-lg-4" style="text-align:center">
+        <!--<img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">-->
+        <h2>Customer 1</h2>
+        <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros.
+            Praesent commodo cursus magna.</p>
+        <!--<p><a class="btn btn-default" href="#" role="button">View details »</a></p>-->
+    </div><!-- /.col-lg-4 -->
+    <div class="col-lg-4" style="text-align:center">
+        <!--<img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">-->
+        <h2>Customer 2</h2>
+        <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo,
+            tortor mauris condimentum nibh.</p>
+        <!--<p><a class="btn btn-default" href="#" role="button">View details »</a></p>-->
+    </div><!-- /.col-lg-4 -->
+      <div class="col-lg-4" style="text-align:center">
+        <!--<img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">-->
+        <h2>Customer 3</h2>
+        <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo,
+            tortor mauris condimentum nibh.</p>
+        <!--<p><a class="btn btn-default" href="#" role="button">View details »</a></p>-->
+    </div><!-- /.col-lg-4 -->
+</div>
+</div>
 
 {% endblock %}
