--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -1,40 +1,34 @@
-<ul class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
-    <a class="navbar-brand col-sm-3 col-md-4 mr-0" href="#"><b>Employee Skill Management</b></a>
-    {% url 'home' as home %}
-    {% url 'about' as about %}
-    {% url 'content' as content %}
-    <input class="form-control form-control-dark w-100" type="text" placeholder="Search" aria-label="Search">
-    <ul class="navbar-nav px-3">
-        <li {% if request.path ==  home %} class="nav-item text-nowrap active" {% else %} class="nav-item text-nowrap" {% endif %}>
-            <a class="nav-link" href="{% url 'home' %}">Home</a>
-        </li>
-    </ul>
-    <ul class="navbar-nav px-3">
-        <li {% if request.path ==  about %} class="nav-item text-nowrap active" {% else %} class="nav-item text-nowrap" {% endif %}>
-            <a class="nav-link" href="{% url 'about' %}">About</a>
-        </li>
-    </ul>
-    <ul class="navbar-nav px-3">
-        <li {% if request.path ==  content %} class="nav-item text-nowrap active" {% else %} class="nav-item text-nowrap" {% endif %}>
-            <a class="nav-link" href="{% url 'content' %}">Contact</a>
-        </li>
-    </ul>
-    <!--<ul class="navbar-nav px-3">-->
-        <!--<li class="nav-item text-nowrap">-->
-            <!--<a class="nav-link" href="#">Account</a>-->
-        <!--</li>-->
-<!--</ul>-->
-        <div class="dropdown">
-          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Account
+<nav class="navbar navbar-default navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
           </button>
-          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
-              <a class="dropdown-item" href="#">Sign up</a>
-              <a class="dropdown-item" href="#">Log in</a>
-              <a class="dropdown-item" href="#">Log out</a>
-          </div>
+          <a class="navbar-brand" href="#"><b>Employee Skill Management</b></a>
         </div>
-
-</nav>
-
-
+        <div id="navbar" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav">
+            {% url 'home' as home %}
+            {% url 'about' as about %}
+            {% url 'contact' as contact %}
+            <li {% if request.path == home %}class="active"{% endif %}><a href='{% url "home" %}'>Home</a></li>
+            <li {% if request.path == about %}class="active"{% endif %}><a href='{% url "about" %}'>About</a></li>
+            <li {% if request.path == contact %}class="active"{% endif %}><a href='{% url "contact" %}'>Contact</a></li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Account <span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                {% if not request.user.is_authenticated %}
+                <li><a href='{% url "account_login" %}'>Login</a></li>
+                <li><a href='{% url "account_signup" %}'>Signup</a></li>
+                {% else %}
+                <li><a href='{% url "account_logout" %}'>Logout</a></li>
+                {% endif %}
+              </ul>
+            </li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </nav>
