--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -11,7 +11,7 @@
     <!--<link rel="icon" href="../../favicon.ico">-->
     <!--<link rel="canonical" href="https://getbootstrap.com/docs/3.4/examples/theme/">-->
 
-    <title>Theme Template for Bootstrap</title>
+    <title>ESM Tool</title>
     <!-- Bootstrap core CSS -->
     <link href='{% static "css/bootstrap.min.css" %}' rel="stylesheet">
     <!-- Bootstrap theme -->
@@ -234,11 +234,10 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://code.jquery.com/jquery-1.12.4.min.js"  integrity="sha384-nvAa0+6Qg9clwYCGGPpDQLVpLNn0fRaROjHqs13t4Ggj3Ez50XnGQqc/r8MhnRDZ"  crossorigin="anonymous"></script>
-    <script>window.jQuery || document.write('<script src='{% static "js/jquery.min.js" %}'><\/script>')</script>
+    <script>window.jQuery || document.write("<script src='{% static "js/jquery.min.js" %}'><\/script>")</script>
     <script src='{% static "js/bootstrap.min.js" %}'></script>
     <script src='{% static "js/docs.min.js" %}'></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src='{% static "js/ie10-viewport-bug-workaround.js" %}'></script>
-
   </body>
 </html>
